--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,7 @@
 # This is t` main binary. List your C files here.
 add_executable(threads
     threads.c
+    loops.c
     )
 
 pico_set_program_name(threads "test")
