tried to move stuff around to get it to work, it did not

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -39,6 +39,7 @@
     "raspberry-pi-pico.python3Path": "/usr/bin/python3",
     "files.associations": {
         "multicore.h": "c",
-        "cyw43_arch.h": "c"
+        "cyw43_arch.h": "c",
+        "stdio.h": "c"
     }
 }
